--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ gscholar/files/master_links_GoogleScholar.csv
 gscholar/files/current_link_GoogleScholar.csv
 gscholar/files/current_link_GoogleScholar.csv
 *.csv
+*.csv
