proberen .gitignore te fixen

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,4 @@ gscholar/files/master_links_GoogleScholar.csv
 gscholar/files/current_link_GoogleScholar.csv
 gscholar/files/current_link_GoogleScholar.csv
 *.csv
-*.csv
-*.csv
-*.csv
+gscholar/files
