add data to repo for journal submission

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,4 @@ gscholar/label:physics_linkData.csv
 *.pyc
 gscholar/physics_profData.csv
 gscholar/physics_linkData.csv
-gscholar/label:physics_GoogleScholarData.csv
-gscholar/files/master_links_GoogleScholar.csv
-gscholar/files/current_link_GoogleScholar.csv
-gscholar/files/current_link_GoogleScholar.csv
-*.csv
-gscholar/files
+1028926 pythonforsds.zip
