new fields added

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ gscholar/label:physics_linkData.csv
 gscholar/physics_profData.csv
 gscholar/physics_linkData.csv
 1028926 pythonforsds.zip
+.Rproj.user
